--- a/css/main.css
+++ b/css/main.css
@@ -95,6 +95,7 @@
     margin-left: 57%;
     margin-bottom: 5%;
     color: #FFFFFF;
+    cursor: pointer;
 }
 .trainer-button:hover{
     background-color: #7a0152;
